# grid-wit-backend

./: .env.local  .replit  gunicorn.conf.py  package-lock.json  package.json  pyproject.toml  replit.nix  requirements.txt  run.py  tsconfig.json  wsgi.py
app/: layout.tsx
app/api/: puzzles.ts
components/: ClueList.tsx  CrosswordGrid.tsx  PuzzleGrid.tsx
grid_wit/: __init__.py
grid_wit/api/: routes.py
grid_wit/config/: database.py
grid_wit/models/: puzzle.py  user.py
grid_wit/utils/: data_loader.py  sample_data.py  verify_data.py
scripts/: init_db.py
